Post form fix broken inputs

--- a/TGJ-SPA/src/app/posts/post-banner/post-banner.component.scss
+++ b/TGJ-SPA/src/app/posts/post-banner/post-banner.component.scss
@@ -25,6 +25,8 @@
     }
 
     .date-wrapper {
+        display: flex;
+        align-items: center;
         color: gray;
     }
 }
